--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,7 +6,7 @@ name: Build and Push Docker Image
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    # branches: [ "main" ]
   pull_request:
     types: [ closed ]
     branches: [ "main" ]
@@ -36,20 +36,20 @@ jobs:
           TAG=$(date +%y%m%d.%H%M%S)
           echo "TAG=$TAG" >> $GITHUB_ENV
 
-      # - name: Build Docker image
-      #   run: docker build -t ghcr.io/$GHCR_USERNAME/$GHCR_REPOSITORY:${{ env.TAG }} -t ghcr.io/$GHCR_USERNAME/$GHCR_REPOSITORY:latest --progress=plain .
+      - name: Build Docker image
+        run: docker build -t ghcr.io/$GHCR_USERNAME/$GHCR_REPOSITORY:${{ env.TAG }} -t ghcr.io/$GHCR_USERNAME/$GHCR_REPOSITORY:latest --progress=plain .
 
-      - name: Build Docker Image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: |
-            ghcr.io/${ github.repository_owner }/${ github.repository }:${{ env.TAG }}
-            ghcr.io/${ github.repository_owner }/${ github.repository }:latest
-          build-args:
-            REACT_APP_API_URL=https://example.com/api
-            REACT_APP_ENVIRONMENT=dev1
+      # - name: Build Docker Image
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: .
+      #     push: true
+      #     tags: |
+      #       ghcr.io/${ github.repository_owner }/${ github.repository }:${{ env.TAG }}
+      #       ghcr.io/${ github.repository_owner }/${ github.repository }:latest
+      #     build-args:
+      #       REACT_APP_API_URL=https://example.com/api
+      #       REACT_APP_ENVIRONMENT=dev1
 
 
       - name: Log in to GitHub Container Registry
