--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,8 +7,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     # branches: [ "main" ]
-  pull_request:
-    types: [ closed ]
+  # pull_request:
+  #   types: [ closed ]
     # branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
