--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,10 +6,10 @@ name: Build and Push Docker Image
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    # branches: [ "main" ]
-  # pull_request:
-  #   types: [ closed ]
-    # branches: [ "main" ]
+    branches: [ "main" ]
+  pull_request:
+    types: [ opened ]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
