--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -39,19 +39,6 @@ jobs:
       - name: Build Docker image
         run: docker build -t ghcr.io/$GHCR_USERNAME/$GHCR_REPOSITORY:${{ env.TAG }} -t ghcr.io/$GHCR_USERNAME/$GHCR_REPOSITORY:latest --progress=plain .
 
-      # - name: Build Docker Image
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     context: .
-      #     push: true
-      #     tags: |
-      #       ghcr.io/${ github.repository_owner }/${ github.repository }:${{ env.TAG }}
-      #       ghcr.io/${ github.repository_owner }/${ github.repository }:latest
-      #     build-args:
-      #       REACT_APP_API_URL=https://example.com/api
-      #       REACT_APP_ENVIRONMENT=dev1
-
-
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2.0.0
         with:
@@ -68,28 +55,9 @@ jobs:
       - name: Scan Docker image with trivy
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ghcr.io/nikolaai/$GHCR_REPOSITORY:${{ env.TAG }}
+          image-ref: ghcr.io/nikolaai/legendary-guacamole:${{ env.TAG }}
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
-
-
-    # # The type of runner that the job will run on
-    # runs-on: ubuntu-latest
-
-    # # Steps represent a sequence of tasks that will be executed as part of the job
-    # steps:
-    #   # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    #   - uses: actions/checkout@v3
-
-    #   # Runs a single command using the runners shell
-    #   - name: Run a one-line script
-    #     run: echo Hello, world!
-
-    #   # Runs a set of commands using the runners shell
-    #   - name: Run a multi-line script
-    #     run: |
-    #       echo Add other actions to build,
-    #       echo test, and deploy your project.
