--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "ansi-html": "^0.0.8",
+    "ansi-regex": "^4.1.1",
     "debug": "^3.1.0",
     "eventsource": "^2.0.2",
     "glob-parent": "^5.1.2",
@@ -16,14 +17,14 @@
     "merge": "^2.1.1",
     "minimatch": "^3.0.5",
     "minimist": "^1.2.6",
+    "nth-check": "^2.0.1",
     "open": "^6.0.0",
-    "shelljs": "^0.8.5",
-    "webpack-dev-server": "^3.1.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "0.9.5"
+    "react-scripts": "^2.1.3",
+    "shelljs": "^0.8.5",
+    "webpack-dev-server": "^4.13.2"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
