--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,7 +23,7 @@ env:
 jobs:
   # This workflow contains a single job called "build"
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: arm64
     # if: github.event.pull_request.merged == true
     steps:
       - name: Checkout repository
